expr/ast/y.output

state 0
	$accept: .Input $end 

	IDENT  shift 9
	NUMBER  shift 12
	STRING  shift 14
	BOOL  shift 13
	NIL  shift 15
	CONST  shift 10
	'-'  shift 7
	'!'  shift 6
	'['  shift 17
	'{'  shift 8
	'('  shift 16
	.  error

	Input  goto 1
	Expr  goto 2
	Ident  goto 3
	Var  goto 4
	ArrIndex  goto 5
	Primary  goto 11
	Acc  goto 18

state 1
	$accept:  Input.$end 

	$end  accept
	.  error


state 2
	Input:  Expr.    (1)
	Expr:  Expr.'+' Expr 
	Expr:  Expr.'-' Expr 
	Expr:  Expr.'*' Expr 
	Expr:  Expr.'/' Expr 
	Expr:  Expr.'^' Expr 
	Expr:  Expr.'&' Expr 
	Expr:  Expr.'|' Expr 
	Expr:  Expr.EQ Expr 
	Expr:  Expr.'%' Expr 
	Expr:  Expr.';' Expr 
	Expr:  Expr.';' 
	Expr:  Expr.AND Expr 
	Expr:  Expr.OR Expr 
	Expr:  Expr.NOTEQ Expr 
	Expr:  Expr.GT Expr 
	Expr:  Expr.GTE Expr 
	Expr:  Expr.LT Expr 
	Expr:  Expr.LTE Expr 
	Expr:  Expr.ORR Expr 
	Expr:  Expr.AS Ident 
	Expr:  Expr.ADDADD 
	Expr:  Expr.SUBSUB 
	Expr:  Expr.VARIADIC 
	Expr:  Expr.'?' Expr ':' Expr 
	Expr:  Expr.NONIL 
	Expr:  Expr.'@' 
	Expr:  Expr.IN Expr 
	Var:  Expr.ACC Ident 
	Var:  Expr.ACC ArrIndex 
	Acc:  Expr.ACC Expr 
	Primary:  Expr.'[' SliceN ':' SliceN ']' 
	ArrIndex:  Expr.'[' Expr ']' 

	EQ  shift 26
	AND  shift 29
	OR  shift 30
	NOTEQ  shift 31
	GT  shift 32
	GTE  shift 33
	LT  shift 34
	LTE  shift 35
	ORR  shift 36
	ACC  shift 45
	IN  shift 44
	VARIADIC  shift 40
	AS  shift 37
	';'  shift 28
	'?'  shift 41
	ADDADD  shift 38
	SUBSUB  shift 39
	'+'  shift 19
	'-'  shift 20
	'*'  shift 21
	'/'  shift 22
	'%'  shift 27
	'&'  shift 24
	'|'  shift 25
	'^'  shift 23
	'@'  shift 43
	NONIL  shift 42
	'['  shift 46
	.  reduce 1 (src line 40)


state 3
	Expr:  Ident.'=' Expr 
	Expr:  Ident.ADDEQ Expr 
	Expr:  Ident.    (40)
	Primary:  Ident.'(' ArgListOpt ')' 

	ADDEQ  shift 48
	'='  shift 47
	'('  shift 49
	.  reduce 40 (src line 88)


state 4
	Expr:  Var.'=' Expr 
	Expr:  Var.ADDEQ Expr 

	ADDEQ  shift 51
	'='  shift 50
	.  error


state 5
	Expr:  ArrIndex.'=' Expr 
	Expr:  ArrIndex.ADDEQ Expr 
	Primary:  ArrIndex.    (56)

	ADDEQ  shift 53
	'='  shift 52
	.  reduce 56 (src line 119)


state 6
	Expr:  '!'.Expr 

	IDENT  shift 9
	NUMBER  shift 12
	STRING  shift 14
	BOOL  shift 13
	NIL  shift 15
	CONST  shift 10
	'-'  shift 7
	'!'  shift 6
	'['  shift 17
	'{'  shift 8
	'('  shift 16
	.  error

	Expr  goto 54
	Ident  goto 3
	Var  goto 4
	ArrIndex  goto 5
	Primary  goto 11
	Acc  goto 18

state 7
	Expr:  '-'.Expr 

	IDENT  shift 9
	NUMBER  shift 12
	STRING  shift 14
	BOOL  shift 13
	NIL  shift 15
	CONST  shift 10
	'-'  shift 7
	'!'  shift 6
	'['  shift 17
	'{'  shift 8
	'('  shift 16
	.  error

	Expr  goto 55
	Ident  goto 3
	Var  goto 4
	ArrIndex  goto 5
	Primary  goto 11
	Acc  goto 18

state 8
	Expr:  '{'.Ids '}' LAMB Expr 
	Primary:  '{'.KvsOpt '}' 
	KvsOpt: .    (62)

	IDENT  shift 9
	NUMBER  shift 12
	STRING  shift 14
	BOOL  shift 13
	NIL  shift 15
	CONST  shift 10
	'-'  shift 7
	'!'  shift 6
	'['  shift 17
	'{'  shift 8
	'('  shift 16
	.  reduce 62 (src line 135)

	Expr  goto 61
	Ident  goto 58
	Var  goto 4
	ArrIndex  goto 5
	Ids  goto 56
	Primary  goto 11
	Acc  goto 18
	KvsOpt  goto 57
	Kvs  goto 59
	Kv  goto 60

state 9
	Expr:  IDENT.LAMB Expr 
	Ident:  IDENT.    (47)

	LAMB  shift 62
	.  reduce 47 (src line 107)


state 10
	Expr:  CONST.Expr 

	IDENT  shift 9
	NUMBER  shift 12
	STRING  shift 14
	BOOL  shift 13
	NIL  shift 15
	CONST  shift 10
	'-'  shift 7
	'!'  shift 6
	'['  shift 17
	'{'  shift 8
	'('  shift 16
	.  error

	Expr  goto 63
	Ident  goto 3
	Var  goto 4
	ArrIndex  goto 5
	Primary  goto 11
	Acc  goto 18

state 11
	Expr:  Primary.    (41)

	.  reduce 41 (src line 89)


state 12
	Primary:  NUMBER.    (48)

	.  reduce 48 (src line 110)


state 13
	Primary:  BOOL.    (49)

	.  reduce 49 (src line 112)


state 14
	Primary:  STRING.    (50)

	.  reduce 50 (src line 113)


state 15
	Primary:  NIL.    (51)

	.  reduce 51 (src line 114)


state 16
	Primary:  '('.Expr ')' 

	IDENT  shift 9
	NUMBER  shift 12
	STRING  shift 14
	BOOL  shift 13
	NIL  shift 15
	CONST  shift 10
	'-'  shift 7
	'!'  shift 6
	'['  shift 17
	'{'  shift 8
	'('  shift 16
	.  error

	Expr  goto 64
	Ident  goto 3
	Var  goto 4
	ArrIndex  goto 5
	Primary  goto 11
	Acc  goto 18

state 17
	Primary:  '['.ArgListOpt ']' 
	ArgListOpt: .    (68)

	IDENT  shift 9
	NUMBER  shift 12
	STRING  shift 14
	BOOL  shift 13
	NIL  shift 15
	CONST  shift 10
	'-'  shift 7
	'!'  shift 6
	'['  shift 17
	'{'  shift 8
	'('  shift 16
	.  reduce 68 (src line 148)

	Expr  goto 67
	Ident  goto 3
	Var  goto 4
	ArrIndex  goto 5
	Primary  goto 11
	Acc  goto 18
	ArgListOpt  goto 65
	ArgList  goto 66

state 18
	Primary:  Acc.    (57)

	.  reduce 57 (src line 120)


state 19
	Expr:  Expr '+'.Expr 

	IDENT  shift 9
	NUMBER  shift 12
	STRING  shift 14
	BOOL  shift 13
	NIL  shift 15
	CONST  shift 10
	'-'  shift 7
	'!'  shift 6
	'['  shift 17
	'{'  shift 8
	'('  shift 16
	.  error

	Expr  goto 68
	Ident  goto 3
	Var  goto 4
	ArrIndex  goto 5
	Primary  goto 11
	Acc  goto 18

state 20
	Expr:  Expr '-'.Expr 

	IDENT  shift 9
	NUMBER  shift 12
	STRING  shift 14
	BOOL  shift 13
	NIL  shift 15
	CONST  shift 10
	'-'  shift 7
	'!'  shift 6
	'['  shift 17
	'{'  shift 8
	'('  shift 16
	.  error

	Expr  goto 69
	Ident  goto 3
	Var  goto 4
	ArrIndex  goto 5
	Primary  goto 11
	Acc  goto 18

state 21
	Expr:  Expr '*'.Expr 

	IDENT  shift 9
	NUMBER  shift 12
	STRING  shift 14
	BOOL  shift 13
	NIL  shift 15
	CONST  shift 10
	'-'  shift 7
	'!'  shift 6
	'['  shift 17
	'{'  shift 8
	'('  shift 16
	.  error

	Expr  goto 70
	Ident  goto 3
	Var  goto 4
	ArrIndex  goto 5
	Primary  goto 11
	Acc  goto 18

state 22
	Expr:  Expr '/'.Expr 

	IDENT  shift 9
	NUMBER  shift 12
	STRING  shift 14
	BOOL  shift 13
	NIL  shift 15
	CONST  shift 10
	'-'  shift 7
	'!'  shift 6
	'['  shift 17
	'{'  shift 8
	'('  shift 16
	.  error

	Expr  goto 71
	Ident  goto 3
	Var  goto 4
	ArrIndex  goto 5
	Primary  goto 11
	Acc  goto 18

state 23
	Expr:  Expr '^'.Expr 

	IDENT  shift 9
	NUMBER  shift 12
	STRING  shift 14
	BOOL  shift 13
	NIL  shift 15
	CONST  shift 10
	'-'  shift 7
	'!'  shift 6
	'['  shift 17
	'{'  shift 8
	'('  shift 16
	.  error

	Expr  goto 72
	Ident  goto 3
	Var  goto 4
	ArrIndex  goto 5
	Primary  goto 11
	Acc  goto 18

state 24
	Expr:  Expr '&'.Expr 

	IDENT  shift 9
	NUMBER  shift 12
	STRING  shift 14
	BOOL  shift 13
	NIL  shift 15
	CONST  shift 10
	'-'  shift 7
	'!'  shift 6
	'['  shift 17
	'{'  shift 8
	'('  shift 16
	.  error

	Expr  goto 73
	Ident  goto 3
	Var  goto 4
	ArrIndex  goto 5
	Primary  goto 11
	Acc  goto 18

state 25
	Expr:  Expr '|'.Expr 

	IDENT  shift 9
	NUMBER  shift 12
	STRING  shift 14
	BOOL  shift 13
	NIL  shift 15
	CONST  shift 10
	'-'  shift 7
	'!'  shift 6
	'['  shift 17
	'{'  shift 8
	'('  shift 16
	.  error

	Expr  goto 74
	Ident  goto 3
	Var  goto 4
	ArrIndex  goto 5
	Primary  goto 11
	Acc  goto 18

state 26
	Expr:  Expr EQ.Expr 

	IDENT  shift 9
	NUMBER  shift 12
	STRING  shift 14
	BOOL  shift 13
	NIL  shift 15
	CONST  shift 10
	'-'  shift 7
	'!'  shift 6
	'['  shift 17
	'{'  shift 8
	'('  shift 16
	.  error

	Expr  goto 75
	Ident  goto 3
	Var  goto 4
	ArrIndex  goto 5
	Primary  goto 11
	Acc  goto 18

state 27
	Expr:  Expr '%'.Expr 

	IDENT  shift 9
	NUMBER  shift 12
	STRING  shift 14
	BOOL  shift 13
	NIL  shift 15
	CONST  shift 10
	'-'  shift 7
	'!'  shift 6
	'['  shift 17
	'{'  shift 8
	'('  shift 16
	.  error

	Expr  goto 76
	Ident  goto 3
	Var  goto 4
	ArrIndex  goto 5
	Primary  goto 11
	Acc  goto 18

state 28
	Expr:  Expr ';'.Expr 
	Expr:  Expr ';'.    (12)

	IDENT  shift 9
	NUMBER  shift 12
	STRING  shift 14
	BOOL  shift 13
	NIL  shift 15
	CONST  shift 10
	'-'  shift 7
	'!'  shift 6
	'['  shift 17
	'{'  shift 8
	'('  shift 16
	.  reduce 12 (src line 55)

	Expr  goto 77
	Ident  goto 3
	Var  goto 4
	ArrIndex  goto 5
	Primary  goto 11
	Acc  goto 18

state 29
	Expr:  Expr AND.Expr 

	IDENT  shift 9
	NUMBER  shift 12
	STRING  shift 14
	BOOL  shift 13
	NIL  shift 15
	CONST  shift 10
	'-'  shift 7
	'!'  shift 6
	'['  shift 17
	'{'  shift 8
	'('  shift 16
	.  error

	Expr  goto 78
	Ident  goto 3
	Var  goto 4
	ArrIndex  goto 5
	Primary  goto 11
	Acc  goto 18

state 30
	Expr:  Expr OR.Expr 

	IDENT  shift 9
	NUMBER  shift 12
	STRING  shift 14
	BOOL  shift 13
	NIL  shift 15
	CONST  shift 10
	'-'  shift 7
	'!'  shift 6
	'['  shift 17
	'{'  shift 8
	'('  shift 16
	.  error

	Expr  goto 79
	Ident  goto 3
	Var  goto 4
	ArrIndex  goto 5
	Primary  goto 11
	Acc  goto 18

state 31
	Expr:  Expr NOTEQ.Expr 

	IDENT  shift 9
	NUMBER  shift 12
	STRING  shift 14
	BOOL  shift 13
	NIL  shift 15
	CONST  shift 10
	'-'  shift 7
	'!'  shift 6
	'['  shift 17
	'{'  shift 8
	'('  shift 16
	.  error

	Expr  goto 80
	Ident  goto 3
	Var  goto 4
	ArrIndex  goto 5
	Primary  goto 11
	Acc  goto 18

state 32
	Expr:  Expr GT.Expr 

	IDENT  shift 9
	NUMBER  shift 12
	STRING  shift 14
	BOOL  shift 13
	NIL  shift 15
	CONST  shift 10
	'-'  shift 7
	'!'  shift 6
	'['  shift 17
	'{'  shift 8
	'('  shift 16
	.  error

	Expr  goto 81
	Ident  goto 3
	Var  goto 4
	ArrIndex  goto 5
	Primary  goto 11
	Acc  goto 18

state 33
	Expr:  Expr GTE.Expr 

	IDENT  shift 9
	NUMBER  shift 12
	STRING  shift 14
	BOOL  shift 13
	NIL  shift 15
	CONST  shift 10
	'-'  shift 7
	'!'  shift 6
	'['  shift 17
	'{'  shift 8
	'('  shift 16
	.  error

	Expr  goto 82
	Ident  goto 3
	Var  goto 4
	ArrIndex  goto 5
	Primary  goto 11
	Acc  goto 18

state 34
	Expr:  Expr LT.Expr 

	IDENT  shift 9
	NUMBER  shift 12
	STRING  shift 14
	BOOL  shift 13
	NIL  shift 15
	CONST  shift 10
	'-'  shift 7
	'!'  shift 6
	'['  shift 17
	'{'  shift 8
	'('  shift 16
	.  error

	Expr  goto 83
	Ident  goto 3
	Var  goto 4
	ArrIndex  goto 5
	Primary  goto 11
	Acc  goto 18

state 35
	Expr:  Expr LTE.Expr 

	IDENT  shift 9
	NUMBER  shift 12
	STRING  shift 14
	BOOL  shift 13
	NIL  shift 15
	CONST  shift 10
	'-'  shift 7
	'!'  shift 6
	'['  shift 17
	'{'  shift 8
	'('  shift 16
	.  error

	Expr  goto 84
	Ident  goto 3
	Var  goto 4
	ArrIndex  goto 5
	Primary  goto 11
	Acc  goto 18

state 36
	Expr:  Expr ORR.Expr 

	IDENT  shift 9
	NUMBER  shift 12
	STRING  shift 14
	BOOL  shift 13
	NIL  shift 15
	CONST  shift 10
	'-'  shift 7
	'!'  shift 6
	'['  shift 17
	'{'  shift 8
	'('  shift 16
	.  error

	Expr  goto 85
	Ident  goto 3
	Var  goto 4
	ArrIndex  goto 5
	Primary  goto 11
	Acc  goto 18

state 37
	Expr:  Expr AS.Ident 

	IDENT  shift 87
	.  error

	Ident  goto 86

state 38
	Expr:  Expr ADDADD.    (29)

	.  reduce 29 (src line 73)


state 39
	Expr:  Expr SUBSUB.    (30)

	.  reduce 30 (src line 74)


state 40
	Expr:  Expr VARIADIC.    (31)

	.  reduce 31 (src line 75)


state 41
	Expr:  Expr '?'.Expr ':' Expr 

	IDENT  shift 9
	NUMBER  shift 12
	STRING  shift 14
	BOOL  shift 13
	NIL  shift 15
	CONST  shift 10
	'-'  shift 7
	'!'  shift 6
	'['  shift 17
	'{'  shift 8
	'('  shift 16
	.  error

	Expr  goto 88
	Ident  goto 3
	Var  goto 4
	ArrIndex  goto 5
	Primary  goto 11
	Acc  goto 18

state 42
	Expr:  Expr NONIL.    (34)

	.  reduce 34 (src line 78)


state 43
	Expr:  Expr '@'.    (35)

	.  reduce 35 (src line 79)


state 44
	Expr:  Expr IN.Expr 

	IDENT  shift 9
	NUMBER  shift 12
	STRING  shift 14
	BOOL  shift 13
	NIL  shift 15
	CONST  shift 10
	'-'  shift 7
	'!'  shift 6
	'['  shift 17
	'{'  shift 8
	'('  shift 16
	.  error

	Expr  goto 89
	Ident  goto 3
	Var  goto 4
	ArrIndex  goto 5
	Primary  goto 11
	Acc  goto 18

state 45
	Var:  Expr ACC.Ident 
	Var:  Expr ACC.ArrIndex 
	Acc:  Expr ACC.Expr 

	IDENT  shift 9
	NUMBER  shift 12
	STRING  shift 14
	BOOL  shift 13
	NIL  shift 15
	CONST  shift 10
	'-'  shift 7
	'!'  shift 6
	'['  shift 17
	'{'  shift 8
	'('  shift 16
	.  error

	Expr  goto 92
	Ident  goto 90
	Var  goto 4
	ArrIndex  goto 91
	Primary  goto 11
	Acc  goto 18

state 46
	Primary:  Expr '['.SliceN ':' SliceN ']' 
	ArrIndex:  Expr '['.Expr ']' 
	SliceN: .    (59)

	IDENT  shift 9
	NUMBER  shift 12
	STRING  shift 14
	BOOL  shift 13
	NIL  shift 15
	CONST  shift 10
	'-'  shift 7
	'!'  shift 6
	'['  shift 17
	'{'  shift 8
	'('  shift 16
	.  reduce 59 (src line 128)

	Expr  goto 94
	Ident  goto 3
	Var  goto 4
	ArrIndex  goto 5
	Primary  goto 11
	Acc  goto 18
	SliceN  goto 93

state 47
	Expr:  Ident '='.Expr 

	IDENT  shift 9
	NUMBER  shift 12
	STRING  shift 14
	BOOL  shift 13
	NIL  shift 15
	CONST  shift 10
	'-'  shift 7
	'!'  shift 6
	'['  shift 17
	'{'  shift 8
	'('  shift 16
	.  error

	Expr  goto 95
	Ident  goto 3
	Var  goto 4
	ArrIndex  goto 5
	Primary  goto 11
	Acc  goto 18

state 48
	Expr:  Ident ADDEQ.Expr 

	IDENT  shift 9
	NUMBER  shift 12
	STRING  shift 14
	BOOL  shift 13
	NIL  shift 15
	CONST  shift 10
	'-'  shift 7
	'!'  shift 6
	'['  shift 17
	'{'  shift 8
	'('  shift 16
	.  error

	Expr  goto 96
	Ident  goto 3
	Var  goto 4
	ArrIndex  goto 5
	Primary  goto 11
	Acc  goto 18

state 49
	Primary:  Ident '('.ArgListOpt ')' 
	ArgListOpt: .    (68)

	IDENT  shift 9
	NUMBER  shift 12
	STRING  shift 14
	BOOL  shift 13
	NIL  shift 15
	CONST  shift 10
	'-'  shift 7
	'!'  shift 6
	'['  shift 17
	'{'  shift 8
	'('  shift 16
	.  reduce 68 (src line 148)

	Expr  goto 67
	Ident  goto 3
	Var  goto 4
	ArrIndex  goto 5
	Primary  goto 11
	Acc  goto 18
	ArgListOpt  goto 97
	ArgList  goto 66

state 50
	Expr:  Var '='.Expr 

	IDENT  shift 9
	NUMBER  shift 12
	STRING  shift 14
	BOOL  shift 13
	NIL  shift 15
	CONST  shift 10
	'-'  shift 7
	'!'  shift 6
	'['  shift 17
	'{'  shift 8
	'('  shift 16
	.  error

	Expr  goto 98
	Ident  goto 3
	Var  goto 4
	ArrIndex  goto 5
	Primary  goto 11
	Acc  goto 18

state 51
	Expr:  Var ADDEQ.Expr 

	IDENT  shift 9
	NUMBER  shift 12
	STRING  shift 14
	BOOL  shift 13
	NIL  shift 15
	CONST  shift 10
	'-'  shift 7
	'!'  shift 6
	'['  shift 17
	'{'  shift 8
	'('  shift 16
	.  error

	Expr  goto 99
	Ident  goto 3
	Var  goto 4
	ArrIndex  goto 5
	Primary  goto 11
	Acc  goto 18

state 52
	Expr:  ArrIndex '='.Expr 

	IDENT  shift 9
	NUMBER  shift 12
	STRING  shift 14
	BOOL  shift 13
	NIL  shift 15
	CONST  shift 10
	'-'  shift 7
	'!'  shift 6
	'['  shift 17
	'{'  shift 8
	'('  shift 16
	.  error

	Expr  goto 100
	Ident  goto 3
	Var  goto 4
	ArrIndex  goto 5
	Primary  goto 11
	Acc  goto 18

state 53
	Expr:  ArrIndex ADDEQ.Expr 

	IDENT  shift 9
	NUMBER  shift 12
	STRING  shift 14
	BOOL  shift 13
	NIL  shift 15
	CONST  shift 10
	'-'  shift 7
	'!'  shift 6
	'['  shift 17
	'{'  shift 8
	'('  shift 16
	.  error

	Expr  goto 101
	Ident  goto 3
	Var  goto 4
	ArrIndex  goto 5
	Primary  goto 11
	Acc  goto 18

state 54
	Expr:  Expr.'+' Expr 
	Expr:  Expr.'-' Expr 
	Expr:  Expr.'*' Expr 
	Expr:  Expr.'/' Expr 
	Expr:  Expr.'^' Expr 
	Expr:  Expr.'&' Expr 
	Expr:  Expr.'|' Expr 
	Expr:  Expr.EQ Expr 
	Expr:  Expr.'%' Expr 
	Expr:  Expr.';' Expr 
	Expr:  Expr.';' 
	Expr:  Expr.AND Expr 
	Expr:  Expr.OR Expr 
	Expr:  Expr.NOTEQ Expr 
	Expr:  Expr.GT Expr 
	Expr:  Expr.GTE Expr 
	Expr:  Expr.LT Expr 
	Expr:  Expr.LTE Expr 
	Expr:  Expr.ORR Expr 
	Expr:  Expr.AS Ident 
	Expr:  '!' Expr.    (28)
	Expr:  Expr.ADDADD 
	Expr:  Expr.SUBSUB 
	Expr:  Expr.VARIADIC 
	Expr:  Expr.'?' Expr ':' Expr 
	Expr:  Expr.NONIL 
	Expr:  Expr.'@' 
	Expr:  Expr.IN Expr 
	Var:  Expr.ACC Ident 
	Var:  Expr.ACC ArrIndex 
	Acc:  Expr.ACC Expr 
	Primary:  Expr.'[' SliceN ':' SliceN ']' 
	ArrIndex:  Expr.'[' Expr ']' 

	ACC  shift 45
	VARIADIC  shift 40
	'^'  shift 23
	'@'  shift 43
	NONIL  shift 42
	'['  shift 46
	.  reduce 28 (src line 72)

